@@ -77,6 +77,7 @@ Settings::Settings() : Glib::ObjectBase(typeid(Settings)),
     syncSamplerInstrumentSelection(*this, GLOBAL, "syncSamplerInstrumentSelection", true),
     moveRootNoteWithRegionMoved(*this, GLOBAL, "moveRootNoteWithRegionMoved", true),
     autoRestoreWindowDimension(*this, GLOBAL, "autoRestoreWindowDimension", false),
+    saveWithTemporaryFile(*this, GLOBAL, "saveWithTemporaryFile", false),
     mainWindowX(*this, MAIN_WINDOW, "x", -1),
     mainWindowY(*this, MAIN_WINDOW, "y", -1),
     mainWindowW(*this, MAIN_WINDOW, "w", -1),
@@ -120,6 +121,7 @@ Settings::Settings() : Glib::ObjectBase(typeid(Settings)),
     m_boolProps.push_back(&syncSamplerInstrumentSelection);
     m_boolProps.push_back(&moveRootNoteWithRegionMoved);
     m_boolProps.push_back(&autoRestoreWindowDimension);
+    m_boolProps.push_back(&saveWithTemporaryFile);
     m_intProps.push_back(&mainWindowX);
     m_intProps.push_back(&mainWindowY);
     m_intProps.push_back(&mainWindowW);
